<resources>
    <string name="app_name">Custom Video Editor</string>
    <string name="rangeSeekBarText">Use RangeSeekbar to select time range for cutting video or extracting images from video(rangeseekbar ineffective for other options)</string>
    <string name="uploadVideo">Upload\nVideo</string>
    <string name="compressVideo">Compress\nVideo</string>
    <string name="cutVideo">Cut\nVideo</string>
    <string name="extractImages">Extract\nImages</string>
    <string name="extractAudio">Extract\nAudio</string>
    <string name="addFade">Add\nFade in-out</string>
    <string name="increaseSpeed">Fast\nMotion</string>
    <string name="decreaseSpeed">Slow\nMotion</string>
    <string name="reverseVideo">Reverse\nVideo</string>
    <string name="dialogMessage">The process will take some time.Please be patient.</string>
    <string name="welcome">SPLASH</string>
    <string name="select_your_source">SELECT SOURCE</string>
    <string name="from_camera">From Camera</string>
    <string name="from_storage">FROM STORAGE</string>
    <string name="text_start_time">00:00:00</string>
    <string name="cut_trim">CUT/TRIM</string>
    <string name="compress">COMPRESS</string>

</resources>
