<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e5e7e9"
    tools:context="com.arc.affle.customvideoplay.ui.activity.SelectSourceActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/select_your_source"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/transitions_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="#808b96"
            android:onClick="onClick"
            android:text="@string/from_camera"
            android:textColor="#fdfefe" />

        <Button
            android:id="@+id/btn_storage"
            android:layout_width="300dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:background="#808b96"
            android:onClick="onClick"
            android:text="@string/from_storage"
            android:textColor="#fdfefe" />

    </LinearLayout>

</RelativeLayout>
