<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:rsb="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/select_your_source"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/sv_main_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadeScrollbars="false"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <VideoView
                android:id="@+id/video_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp200"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp5" />


            <org.florescu.android.rangeseekbar.RangeSeekBar
                android:id="@+id/range_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/video_view"
                android:layout_marginTop="@dimen/dp5"
                app:showLabels="false"
                rsb:activeColor="#ED1C24"
                rsb:textAboveThumbsColor="#000000" />

            <TextView
                android:id="@+id/tv_time_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_alignLeft="@+id/range_seek_bar"
                android:layout_alignStart="@+id/range_seek_bar"
                android:layout_below="@+id/range_seek_bar"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_time_right"
                android:layout_width="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/range_seek_bar"
                android:layout_alignRight="@+id/range_seek_bar"
                android:layout_below="@+id/range_seek_bar"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_time_right"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/dp5"
                android:gravity="center"
                android:text="@string/rangeSeekBarText"
                android:textColor="#000000" />
            <LinearLayout
                android:id="@+id/ll_ib"
                android:padding="10dp"
                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/tv_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ib_cut"
                    android:onClick="onClick"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/cut"
                    android:layout_width="50dp"
                    android:layout_height="40dp" />

                <ImageView
                    android:id="@+id/ib_compress"
                    android:onClick="onClick"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/compress"
                    android:layout_width="50dp"
                    android:layout_height="40dp" />
            </LinearLayout>
            <LinearLayout

                android:padding="10dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/ll_ib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

               <TextView
                   android:text="@string/cut_trim"
                   android:layout_marginRight="10dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />


                <TextView
                    android:text="@string/compress"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>



        </RelativeLayout>
    </ScrollView>
</LinearLayout>